fixed select scrollbar width

--- a/src/css/components/_forms.css
+++ b/src/css/components/_forms.css
@@ -22,7 +22,6 @@
 
 select,
 select.form-control {
-  --scrollbar-width: 7px;
   padding-right: 28px;
   background-image: var(--select-icon);
   background-size: 18px;
